# rust-axus-example

./: Cargo.toml  Dockerfile  README.md  database.db
migrations/: 20250820082750_create_users_table.up.sql
src/: main.rs
